# numbox

./: .buildinfo  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  genindex.html  index.html  modules.html  numbox.core.any.html  numbox.core.bindings.html  numbox.core.bindings.sqlite.html  numbox.core.proxy.html  numbox.core.variable.html  numbox.core.vector.html  numbox.core.work.html  numbox.utils.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree  modules.doctree  numbox.core.bindings.doctree  numbox.core.bindings.sqlite.doctree  numbox.core.proxy.doctree  numbox.core.variable.doctree  numbox.core.vector.doctree  numbox.core.work.doctree  numbox.utils.doctree
.github/workflows/: docs.yml  numbox_ci.yml  release.yml  versioning.yml
_modules/: index.html
_sources/: modules.rst.txt  numbox.core.bindings.rst.txt  numbox.core.bindings.sqlite.rst.txt  numbox.core.variable.rst.txt  numbox.core.vector.rst.txt  numbox.core.work.rst.txt  numbox.utils.rst.txt
_static/: work_registry.py
docs/: conf.py  index.rst  modules.rst  numbox.core.any.rst  numbox.core.bindings.rst  numbox.core.proxy.rst  numbox.core.rst  numbox.core.variable.rst  numbox.core.vector.rst  numbox.core.work.rst  numbox.utils.rst
numbox/core/: any_type.py  configurations.py  declare.py  meminfo.py  node.py  proxy.py  vector.py  work.py  work_utils.py
numbox/utils/: clock.py  cstrings.py  digest.py  fingerprint.py  highlevel.py  lowlevel.py  meminfo.py  preprocessing.py  pysqlite_bridge.py  standard.py  timer.py
test/: auxiliary_utils.py  benchmark_work.py  common_structrefs.py  compile_kernel_benchmark.py  multiple_overloads.py  random_graph.py  stress_work.py  stress_work_runner.py  test_multiple_overloads.py  test_node.py  test_numbox.py  test_work.py
test/core/: conftest.py  random_image_ref.py  test_abi.py  test_any_type.py  test_bindings.py  test_builder.py  test_builder_utils.py  test_caching_work.py  test_combine.py  test_compile_kernel.py  test_declare.py  test_errno.py  test_fmtio.py  test_load_unaligned.py  test_loader.py  test_loader_utils.py  test_lowlevel_work_utils.py  (+29 more)
(+136 files in other folders)
