[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbox*"]

[project]
name = "numbox"
dynamic = ["version"]
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["llvmlite", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[project.optional-dependencies]
docs = ["sphinx==8.1.3", "sphinx_rtd_theme"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "numbox.__version__"}
