[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbox*"]

[project]
name = "numbox"
dependencies = [
    "llvmlite>=0.43.0,<0.46.0;python_version<'3.14'",
    "llvmlite==0.46.0;python_version=='3.14'",
    "numba>=0.60.0,<0.63.0;python_version<'3.14'",
    "numba==0.63.1;python_version=='3.14'",
    "numpy>=2.1.0,<2.4.0"
]
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["llvmlite", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[project.optional-dependencies]
docs = ["sphinx==8.1.3", "sphinx-sitemap==2.7.2", "sphinx_rtd_theme"]

[tool.setuptools.dynamic]
version = {attr = "numbox.__version__"}
